# logos-video-hotspot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  flake.nix  module.yaml
cli/: CMakeLists.txt
cli/src/: headless_core.h  main.cpp  output_formatter.cpp  output_formatter.h
cli/src/commands/: cache_command.cpp  commands.h  download_command.cpp  list_command.cpp  monitor_command.cpp  status_command.cpp  upload_command.cpp
core/include/video_hotspot/: deduplicator.h  indexing_service.h  messaging_client.h  metadata_extractor.h  storage_client.h  upload_queue.h
core/src/: deduplicator.cpp  indexing_service.cpp  messaging_client.cpp  metadata_extractor.cpp  storage_client.cpp  upload_queue.cpp
demo/: FURPS_VERIFICATION.md  README.md  cli-demo.cast  gen-gui-mockup.py  gen-gui-video.sh  gen-voice-edge.sh  gen-voice.sh  record-cli.sh  record-gui-v2.sh  record-gui.sh  record-real-demo.sh  voiceover.txt
demo/logos-shell-mock/: run_demo.py
demo/voice/: concat.txt
docs/: sdk-integration-notes.md
docs/adr/: 0001-language-and-framework.md  0002-logos-core-headless-mode.md  0003-storage-module-api.md  0004-messaging-module-live-indexing.md  0005-deduplication-strategy.md
packaging/: logos-daemon-deps.txt.in
scripts/: build-sdk.sh  build-with-nix-qt.sh
tests/: CMakeLists.txt
tests/e2e/: e2e_helpers.sh  test_cache_clear.sh  test_deduplication.sh  test_download.sh  test_folder_monitor.sh  test_list.sh  test_status.sh  test_upload.sh  test_upload_download.sh  test_upload_folder.sh
tests/unit/: test_deduplicator.cpp  test_indexing_service.cpp  test_metadata_extractor.cpp  test_upload_queue.cpp
ui/app/: CMakeLists.txt  main.cpp
ui/plugin/: CMakeLists.txt  VideoHotspotPlugin.cpp  VideoHotspotPlugin.h  manifest.json  resources.qrc  video_hotspot.json  video_hotspot_plugin.json
ui/plugin/interfaces/: IComponent.h
ui/plugin/qml/: VideoHotspotApp.qml
